
For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2015.8.16[/b]:
-Ability to load and show 32-bit HD SLP graphics.
-Rotate palette view from player color copy button.

Version [b]2015.8.13[/b]:
-SLP files are released after reading.
-Dynamically load extra HD palettes.
-Unit action graphics are viewable now.

Version [b]2015.8.12[/b]:
-Added separate SLP view window.
-Ability to choose which unit graphics are shown.

Version [b]2015.8.5[/b]:
-SLP loading code should now handle all kinds of properly formatted files.
-Second DRS folder readable.
-Loop static graphics with angles too.
-Added palette display.
-SLP graphic player color selectable in colors tab.
-DRS files can be (un)loaded from a button.
-Graphics centered based on their anchor.
-Show delta/annex/stack/head SLP graphics stacked.

Version [b]2015.7.31[/b]:
-SLP graphics can be shown, excluding AoE 1 for now.
-Color variables colored according to 50500 palette.
-Two or more text files can be loaded.

Version [b]2015.7.21[/b]:
-AoK HD txt files are readable again.
-Restored editing map data for non SWGB versions.

Version [b]2015.7.6[/b]:
-Fixed a bug that prevented copying units.
-Terrain variable found in unit commands.

Version [b]2015.7.3[/b]:
-New editors are now opened from a button instead of needing to specify the amount at start.
-Improved performance of lists in units and graphics tabs.
-Easily see if a unit exists in other civilizations.

Version [b]2015.6.24[/b]:
-Adjusted defaults for AoK HD.
-Added defaults button for Forgotten Empires.
-Windows scaling support.

Version [b]2015.6.10[/b]:
-Added edit counter in status bar.
-LudiKRISly faster to add, delete and 1:1 paste items.
-First visible item stays same when using buttons.
-Removed obsolete open/save options.